--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: nercury@gmail.com
 description: >
   The irony is that it is not really ironic.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "http://nercury.github.io" # the base hostname & protocol for your site
 twitter_username: nercury
 github_username:  Nercury
 
