--- a/_config.yml
+++ b/_config.yml
@@ -11,3 +11,6 @@ github_username:  Nercury
 # Build settings
 markdown: redcarpet
 highlighter: pygments
+
+redcarpet:
+    extensions:    ["with_toc_data"]
