--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ github_username:  Nercury
 
 # Build settings
 markdown: redcarpet
-highlighter: pygments
+highlighter: rouge
 
 redcarpet:
     extensions:    ["with_toc_data"]
